Corrige ruta de regiustro de usuario.

--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -47,7 +47,8 @@
   </nav>
 
   <div class="container-fluid bg-3">
-      <table class="table">
+    <h2>Welcome {{user_name}}</h2>
+    <!-- <table class="table">
       <thead>
         <tr>
             <th scope="col">Name</th>
@@ -63,9 +64,8 @@
             <td>{{session['language']}}</td>
             <td>{{session['comment']}}</td>
         </tr>
-        </th>
       </tbody>
-    </table>
+    </table> -->
 
   </div><br>
 
