--- a/flask_app/templates/login_reg.html
+++ b/flask_app/templates/login_reg.html
@@ -19,6 +19,19 @@
       background-color: #f2f2f2;
       padding: 25px;
     }
+
+    .list-group {
+      margin: 10px 0;
+    }
+
+    .list-group-item {
+      margin: 0;
+      padding: 0;
+    }
+
+    .alert {
+      margin: 0;
+    }
   </style>
 </head>
 <body>
@@ -48,6 +61,17 @@
     <div class="row">
       <div class="col-lg-6 mb-4">
         <div class="card">
+          {% with messages = get_flashed_messages() %} 
+            {% if messages %}
+            <ul class="flashes list-group">
+              {% for message in messages %}
+              <li class="list-group-item">
+                <div class="alert alert-success">{{message}}</div>
+              </li>
+              {% endfor %}
+            </ul>
+            {% endif %} 
+          {% endwith %}
           <div class="card-body">
             <div class="card-body" style="width: 40rem; background-color: lightgrey">
               <h3 class="text-success">Register</h3><br>
@@ -82,10 +106,23 @@
       </div>
       <div class="col-lg-6 mb-4">
         <div class="card">
+
+          {% with messages = get_flashed_messages() %} 
+            {% if messages %}
+            <ul class="flashes list-group">
+              {% for message in messages %}
+              <li class="list-group-item">
+                <div class="alert alert-success">{{message}}</div>
+              </li>
+              {% endfor %}
+            </ul>
+            {% endif %} 
+          {% endwith %}
+
           <div class="card-body">
             <div class="card-body" style="width: 40rem; background-color: lightgrey">
               <h3 class="text-success">Login</h3><br>
-              <form action="/process" method="POST">
+              <form action="/login" method="POST">
                 <div class="mb-3">
                   <div class="form-group">
                     <label for="email_login" class="form_label">Email</label>
@@ -93,7 +130,7 @@
                   </div>
                   <div class="form-group">
                     <label for="password_login" class="form_label">Password</label>
-                    <input type="text" class="form-control" id="password_login" name="password_login" placeholder="Password">
+                    <input type="password" class="form-control" id="password_login" name="password_login" placeholder="Password">
                   </div> 
                 </div>
                 <button type="submit" class="btn btn-success">Login</button>
